--- a/api/pom.xml
+++ b/api/pom.xml
@@ -37,6 +37,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
+      <scope>provided</scope>
       <version>3.1.0</version>
 
     </dependency>
