--- a/api/pom.xml
+++ b/api/pom.xml
@@ -5,7 +5,7 @@
   <groupId>io.egen</groupId>
   <artifactId>Cartracker</artifactId>
   <version>1.0.0</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>Cartracker</name>
   <url>http://maven.apache.org</url>
